refactor(Race): selectWinners 메서드 리팩토링
selectWinners(): getDistance()로 거리를 비교하는 것이 아닌 isDistanceAt()을 사용하도록 수정하였습니다